[[fix]] Scrolling sollte sich nur auf scrollbare Bereich beziehen und nicht die ganze Oberfläche scrollen

--- a/css/win/bars.css
+++ b/css/win/bars.css
@@ -40,6 +40,7 @@
   height: 100%;
   overflow-x: hidden;
   overflow-y: auto;
+  overscroll-behavior: contain;
 }
 
 :is(#filters, #results) p {
